2000-10-10  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* scripts/ctl-amd.in: add targets condrestart (redhat) and
	reload.

2000-10-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* scripts/lostaltmail.in (vrfy_user): ensure that MAILDIR is
	defined.

2000-09-18  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* amd/opts.c (backslash): Bell char (ASCII 007) should be \g, not
	\a.

2000-09-17  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* include/am_utils.h: removed unused field opt_autopref

	* amd/opts.c: removed unused variable $autopref

2000-09-05  Erez Zadok  <ezk@aladdin.dev.hydraweb.com>

	* conf/mtab/mtab_svr4.c (lockfile): function not needed unless
	MOUNT_TABLE_ON_FILE is defined.
	mtlckname static var is onlyneeded if MOUNT_TABLE_ON_FILE.
	(update_mnttab_fields): only needed if MOUNT_TABLE_ON_FILE.

2000-09-03  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* buildall (Usage): typo in usage string

2000-08-25  Erez Zadok  <ezk@lynn.soscorp.com>

	* conf/mount/mount_linux.c (mount_linux): MNT2_NFS_OPT_VER3 may
	is no defined on older Linux systems (kernel 2.0.36)

2000-08-19  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* scripts/amd.conf.5: correct swapped descriptions for ldap_base
	and ldap_hostports.

	* doc/am-utils.texi: correct swapped descriptions for ldap_base
	and ldap_hostports.

	* scripts/amd.conf-sample: swap examples for ldap_base and
	ldap_hostports.

2000-08-13  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* scripts/amd.conf-sample: -O is CLI equivalent to "os"
	amd.conf parameter

2000-07-30  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* scripts/amd.conf-sample (nfs_retransmit_counter): correct
	meaning and use of parameter

2000-07-23  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* doc/am-utils.texi: updated URLs to www.am-utils.org.

2000-07-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* doc/am-utils.texi (Supported Platforms): document osf4.0f

2000-06-19  Erez Zadok  <ezk@vir.cs.columbia.edu>
