@@ -38,7 +38,7 @@
 .\"
 .\"	%W% (Berkeley) %G%
 .\"
-.\" $Id: amq.8,v 1.4 2000/02/26 20:32:30 ezk Exp $
+.\" $Id: amq.8,v 1.5 2000/10/12 00:44:59 ezk Exp $
 .\"
 .TH AMQ 8 "25 April 1989"
 .SH NAME
@@ -46,7 +46,7 @@ amq \- automounter query tool
 .SH SYNOPSIS
 .B amq
 [
-.BI \-fmpsuvwHTU
+.BI \-fmpsvwHTU
 ] [
 .BI \-h " hostname"
 ] [
@@ -59,9 +59,11 @@ amq \- automounter query tool
 .BI \-M " mountmap entry"
 ] [
 .BI \-P " program_number"
-] [
-.I directory
-] .\|.\|.
+] [[
+.B \-u
+]
+.I directory .\|.\|.
+]
 .SH DESCRIPTION
 .B Amq
 provides a simple way of determining the current state of
