@@ -1,3 +1,9 @@
+2000-10-11  Erez Zadok  <ezk@lorien.dev.hydraweb.com>
+
+	* amq/amq.8: synchronize Amq's options with reality
+
+	* amq/amq.c (main): synchronize Amq's usage() string with reality
+
 2000-10-10  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
 
 	* scripts/ctl-amd.in: add targets condrestart (redhat) and
